--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "author": "ausgore",
   "license": "MIT",
   "version": "1.0.0",
+  "keywords": [
+    "chess",
+    "chessboard"
+  ],
   "dependencies": {
     "@napi-rs/canvas": "^0.1.53",
     "chess.js": "^1.0.0-beta.8",
