--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "ausgore",
   "main": "lib/index.js",
   "license": "MIT",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "keywords": [
     "chess",
     "chessboard"
@@ -12,11 +12,11 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.53",
     "chess.js": "^1.0.0-beta.8",
-    "path": "^0.12.7"
+    "gifencoder": "^2.0.1"
   },
   "devDependencies": {
+    "@types/gifencoder": "^2.0.3",
     "@types/node": "^22.2.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
